--- a/action.yml
+++ b/action.yml
@@ -18,4 +18,7 @@ runs:
       shell: cmd
       id: main
       working-directory: ${{ github.workspace }}
-      run: ${{ github.action_path }}/run.bat
+      run: |
+        export OHOS_SDK_HOME= ${{ github.action_path }}
+        env
+        ${{ github.action_path }}/run.bat
