--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,5 @@ runs:
       id: main
       working-directory: ${{ github.workspace }}
       run: |
-        export OHOS_SDK_HOME= ${{ github.action_path }}
-        env
+        xcopy ${{ github.action_path }}\config ${{ github.workspace }}\huawei\
         ${{ github.action_path }}/run.bat
