--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,5 @@ runs:
       id: main
       working-directory: ${{ github.workspace }}
       run: |
-        xcopy ${{ github.action_path }}\config ${{ github.workspace }}\huawei\
-        dir huawei
-        dir huawei\config
+        xcopy ${{ github.action_path }}\config ${{ github.workspace }}\huawei\con
         ${{ github.action_path }}/run.bat
