--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'HarmonyOS-build'
-description: 'build HMOS libraries'
+description: 'This Github action helps build and analyse HMOS libraries'
 inputs:
   who-to-greet:  # id of input
     description: 'Build HMOS libraries'
