--- a/action.yml
+++ b/action.yml
@@ -14,4 +14,5 @@ runs:
       working-directory: ${{ github.workspace }}
       run: |
         xcopy ${{ github.action_path }}\config ${{ github.workspace }}\config\
+        xcopy ${{ github.action_path }}\config\local.properties ${{ github.workspace }}\
         ${{ github.action_path }}/run.bat
